# cppTradingBot

./: .gitignore  BTC_USD_Downloader.py  CMakeLists.txt  NVDA_Downloader.py  README.md
data/: BTC-USD.csv  NVDA.csv
include/: backtester.hpp  candlestick.hpp  strategy.hpp
src/: backtester.cpp  main.cpp  strategy.cpp
